--- a/options.html
+++ b/options.html
@@ -64,13 +64,14 @@ label { display: block; }
 	<legend>Favorite values</legend>
 	<p><label for="protocols">Protocols:</label> <textarea rows="1" id="protocols"></textarea></p>
 	<p><label for="hostnames">Hostnames:</label> <textarea rows="1" id="hostnames"></textarea></p>
-	<p><label for="ports"    >Ports:</label>     <textarea rows="1" id="ports"></textarea></p>
+	<p><label for="ports"    >Ports:</label>     <textarea rows="1" id="ports"    ></textarea></p>
 	<p><label for="pathnames">Pathnames:</label> <textarea rows="1" id="pathnames"></textarea></p>
 </fieldset>
 
 <fieldset>
 	<legend>Look and feel</legend>
 	<p><label><input type="checkbox" id="hide_passwords"> Hide passwords</label></p>
+	<p><label title="Hide tooltips (like this one)"><input type="checkbox" id="hide_tooltips"> Hide tooltips</label></p>
 	<p><label for="window_width" >Window width:</label>     <input type="number" id="window_width" min="300" max="800" step="1" required></p>
 	<p><label for="input_font"   >Single-line font:</label> <input type="text" id="input_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
 	<p><label for="textarea_font">Multi-line font:</label>  <input type="text" id="textarea_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
