Adding instantaneous feedback for font changes.

--- a/options.html
+++ b/options.html
@@ -40,6 +40,12 @@ fieldset > p > label:only-child {
 	padding-left: 4px;
 }
 
+input:invalid,
+textarea:invalid {
+	background: #FCC;
+	color: black;
+}
+
 #status {
 	position: fixed;
 	top: 0;
@@ -55,6 +61,8 @@ fieldset > p > label:only-child {
 
 label { display: block; }
 </style>
+<style id="input_font_style"></style>
+<style id="textarea_font_style"></style>
 </head>
 <body>
 
