--- a/options.html
+++ b/options.html
@@ -78,8 +78,7 @@ label { display: block; }
 
 <fieldset>
 	<legend>Look and feel</legend>
-	<p><label><input type="checkbox" id="hide_passwords"> Hide passwords</label></p>
-	<p><label title="Hide tooltips (like this one)"><input type="checkbox" id="hide_tooltips"> Hide tooltips</label></p>
+	<p><label title="Hide tooltips (like this one)"><input type="checkbox" id="hide_tooltips"> Hide tooltips and shortcut reminders</label></p>
 	<p><label for="window_width" >Window width:</label>     <input type="number" id="window_width" min="300" max="800" step="1" required></p>
 	<p><label for="input_font"   >Single-line font:</label> <input type="text" id="input_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
 	<p><label for="textarea_font">Multi-line font:</label>  <input type="text" id="textarea_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
