--- a/options.html
+++ b/options.html
@@ -4,18 +4,11 @@
 <meta charset="utf8">
 <script src="common.js" defer></script>
 <script src="options.js" defer></script>
+<link rel="stylesheet" href="common.css">
 <title>URI Splitter</title>
 <style>
 textarea {
-	box-sizing: border-box;
-	resize: none;
 	min-height: 2.5em;
-	overflow: hidden;
-}
-fieldset {
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 2px;
 }
 
 fieldset > p {
@@ -40,12 +33,6 @@ fieldset > p > label:only-child {
 	padding-left: 4px;
 }
 
-input:invalid,
-textarea:invalid {
-	background: #FCC;
-	color: black;
-}
-
 #status {
 	position: fixed;
 	top: 0;
@@ -59,7 +46,9 @@ textarea:invalid {
 	color: red;
 }
 
-label { display: block; }
+label {
+	display: block;
+}
 </style>
 <style id="input_font_style"></style>
 <style id="textarea_font_style"></style>
@@ -78,7 +67,7 @@ label { display: block; }
 
 <fieldset>
 	<legend>Look and feel</legend>
-	<p><label title="Hide tooltips (like this one)"><input type="checkbox" id="hide_tooltips"> Hide tooltips and shortcut reminders</label></p>
+	<p><label title="Hide tooltips (like this one) and the keyboard shortcut overlay that shows up when you hold a modifier key."><input type="checkbox" id="hide_tooltips"> Hide tooltips and keyboard shortcut reminders</label></p>
 	<p><label for="window_width" >Window width:</label>     <input type="number" id="window_width" min="300" max="800" step="1" required></p>
 	<p><label for="input_font"   >Single-line font:</label> <input type="text" id="input_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
 	<p><label for="textarea_font">Multi-line font:</label>  <input type="text" id="textarea_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
