Keep the window scrolled to the bottom when changing quick options
A small detail that can't be noticed when it works properly, but is
annoying if it is not there.

--- a/popup.html
+++ b/popup.html
@@ -16,9 +16,10 @@ html, body, form, p, div {
 html {
 	min-width: 300px;
 	max-width: 800px;
-	margin: 0;
-	padding: 4px;
 	box-sizing: border-box;
+}
+body {
+	padding: 4px;
 }
 
 textarea {
@@ -223,6 +224,8 @@ input#hash_sep {
 	</div>
 </div>
 
+</form>
+
 <div class="group hidden" id="options_panel">
 	<fieldset>
 		<legend>Quick options</legend>
@@ -278,6 +281,5 @@ input#hash_sep {
 <datalist id="hostnames"></datalist>
 <datalist id="pathnames"></datalist>
 
-</form>
 </body>
 </html>
