README.md half-way done
I still want to add more text to the README file.

Also added two links at the bottom of Options page.

--- a/options.html
+++ b/options.html
@@ -73,6 +73,9 @@ label {
 	<p><label for="textarea_font">Multi-line font:</label>  <input type="text" id="textarea_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
 </fieldset>
 
+<p><a href="https://github.com/denilsonsa/crx-uri-splitter/">Source-code at GitHub</a></p>
+<p><a id="link_to_configurecommands" href="chrome://extensions/configureCommands">Keyboard Shortcuts for Chrome extensions</a></p>
+
 </body>
 </html>
 
