--- a/options.html
+++ b/options.html
@@ -18,7 +18,8 @@ fieldset > p {
 	margin: 1px 0;
 }
 fieldset > p > input,
-fieldset > p > textarea {
+fieldset > p > textarea,
+fieldset > p > a {
 	flex: 1 1 auto;
 	width: 66%;
 }
@@ -33,17 +34,24 @@ fieldset > p > label:only-child {
 	padding-left: 4px;
 }
 
+body > p {
+	margin: 0;
+}
+
 #status {
 	position: fixed;
 	top: 0;
 	right: 0;
 	padding: 0.5em;
+	border-radius: 4px;
 }
 #status.ok {
 	color: green;
+	background: #EEE;
 }
 #status.error {
 	color: red;
+	background: #EEE;
 }
 
 label {
@@ -66,15 +74,16 @@ label {
 </fieldset>
 
 <fieldset>
-	<legend>Look and feel</legend>
+	<legend>Behavior, look and feel</legend>
+	<p><label title="When disabled, the new tab is appended to end of the tab bar. When enabled, the extension tries to mimic Chrome's default behavior, but ends up behaving slightly different."><input type="checkbox" id="new_tab_next_to_current"> Open new tab next to the current one</label></p>
 	<p><label title="Hide tooltips (like this one) and the keyboard shortcut overlay that shows up when you hold a modifier key."><input type="checkbox" id="hide_tooltips"> Hide tooltips and keyboard shortcut reminders</label></p>
 	<p><label for="window_width" >Window width:</label>     <input type="number" id="window_width" min="300" max="800" step="1" required></p>
-	<p><label for="input_font"   >Single-line font:</label> <input type="text" id="input_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
-	<p><label for="textarea_font">Multi-line font:</label>  <input type="text" id="textarea_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
+	<p title="CSS font declaration for text input fields"><label for="input_font"   >Single-line font:</label> <input type="text" id="input_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
+	<p title="CSS font declaration for textarea"><label for="textarea_font">Multi-line font:</label>  <input type="text" id="textarea_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
+	<p title="The default shortcut is Ctrl+Shift+L"><label for="link_to_configurecommands">Launch key:</label> <a id="link_to_configurecommands" href="chrome://extensions/configureCommands">Configure Keyboard Shortcuts</a></p>
 </fieldset>
 
 <p><a href="https://github.com/denilsonsa/crx-uri-splitter/">Source-code at GitHub</a></p>
-<p><a id="link_to_configurecommands" href="chrome://extensions/configureCommands">Keyboard Shortcuts for Chrome extensions</a></p>
 
 </body>
 </html>
