--- a/popup.html
+++ b/popup.html
@@ -100,9 +100,7 @@ input#port {
 input#search_sep,
 input#hash_sep {
 	width: 6ch;
-}
-input#hash_sep {
-	border-left-width: 0;
+	border-radius: 2px;
 }
 
 #shortcuts_overlay {
@@ -145,7 +143,7 @@ input#hash_sep {
 #options_panel table td,
 #options_panel table th {
 	border: 0;
-	padding: 0;
+	padding: 0 2px;
 	text-align: left;
 	vertical-align: middle;
 	font: inherit;
