--- a/options.html
+++ b/options.html
@@ -81,6 +81,7 @@ label {
 	<legend>Behavior, look and feel</legend>
 	<p><label title="When disabled, the new tab is appended to end of the tab bar. When enabled, the extension tries to mimic Chrome's default behavior, but ends up behaving slightly different."><input type="checkbox" id="new_tab_next_to_current"> Open new tab next to the current one</label></p>
 	<p><label title="Hide tooltips (like this one) and the keyboard shortcut overlay that shows up when you hold a modifier key."><input type="checkbox" id="hide_tooltips"> Hide tooltips and keyboard shortcut reminders</label></p>
+	<p><label title="This instructs the browser not to save or suggest input values based on previous usage. For some people, autofill is useful, for others it is annoying and raises privacy concerns. This option has no effect if autofill is already disabled in your browser."><input type="checkbox" id="disable_autocomplete"> Disable browser's built-in autocomplete (autofill)</label></p>
 	<p><label for="window_width" >Window width:</label>     <input type="number" id="window_width" min="300" max="800" step="1" required></p>
 	<p title="CSS font declaration for text input fields"><label for="input_font"   >Single-line font:</label> <input type="text" id="input_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
 	<p title="CSS font declaration for textarea"><label for="textarea_font">Multi-line font:</label>  <input type="text" id="textarea_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
