--- a/options.html
+++ b/options.html
@@ -19,7 +19,8 @@ fieldset > p {
 }
 fieldset > p > input,
 fieldset > p > textarea,
-fieldset > p > a {
+fieldset > p > a,
+fieldset > p > span {
 	flex: 1 1 auto;
 	width: 66%;
 }
@@ -85,7 +86,7 @@ label {
 	<p><label for="window_width" >Window width:</label>     <input type="number" id="window_width" min="300" max="800" step="1" required></p>
 	<p title="CSS font declaration for text input fields"><label for="input_font"   >Single-line font:</label> <input type="text" id="input_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
 	<p title="CSS font declaration for textarea"><label for="textarea_font">Multi-line font:</label>  <input type="text" id="textarea_font" placeholder="CSS &quot;font&quot; property" required pattern="[^;]+"></p>
-	<p title="The default shortcut is Ctrl+Shift+L"><label for="link_to_configurecommands">Launch key:</label> <a id="link_to_configurecommands" href="chrome://extensions/configureCommands">Configure Keyboard Shortcuts</a></p>
+	<p title="The default shortcut is Ctrl+Shift+L"><label for="link_to_configurecommands">Launch key:</label> <span><output id="shortcut_key"></output><br><a id="link_to_configurecommands" href="chrome://extensions/configureCommands">Configure Keyboard Shortcuts</a></span></p>
 </fieldset>
 
 <fieldset>
