--- a/options.html
+++ b/options.html
@@ -7,6 +7,10 @@
 <link rel="stylesheet" href="common.css">
 <title>URI Splitter</title>
 <style>
+html {
+	width: 40em;
+}
+
 textarea {
 	min-height: 2.5em;
 }
