Added automatic light/dark theme support.
The buttons still need to be styled.

--- a/popup.html
+++ b/popup.html
@@ -159,10 +159,10 @@ input#hash_sep {
 	height: 100%;
 }
 #options_panel table tbody tr:hover {
-	background: #EEE;
+	background: var(--hover-color);
 }
 #options_panel table tbody tr td label:hover {
-	background: #DDD;
+	/* background: #DDD; */
 }
 
 .row.buttons > input[type="submit"],
