--- a/popup.html
+++ b/popup.html
@@ -172,12 +172,30 @@ input#hash_sep {
 	flex: 1 1 auto;
 	width: 3em;
 	padding: 2px 0;
+	margin: 0;
+	border: 1px solid var(--border-color);
+	/* TODO: nice dark/light button style. */
 }
 .row.buttons > input#options {
 	width: auto;
 	flex: 0 0 auto;
 	padding: 2px;
+	margin-right: 2px;
 }
+.row.buttons > input#options,
+.row.buttons > input#open {
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+.row.buttons > input#options,
+.row.buttons > input#incognito {
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+.row.buttons > input#open ~ input {
+	border-left: 0;
+}
+
 #options_panel.hidden {
 	display: none;
 }
