Escaped the dash character in the character class
Fixes "Invalid character in class in regular expression" error in
Firefox.

--- a/popup.html
+++ b/popup.html
@@ -220,7 +220,7 @@ input#hash_sep {
 
 <div class="group">
 	<div class="row">
-		<input type="text" id="protocol" list="protocols" pattern="[-a-zA-Z0-9+.]+" placeholder="protocol" title="Protocol" data-keyboard="2">
+		<input type="text" id="protocol" list="protocols" pattern="[\-a-zA-Z0-9+.]+" placeholder="protocol" title="Protocol" data-keyboard="2">
 		<input type="text" id="username" placeholder="username" title="Username" data-keyboard="3 U @">
 		<input type="text" id="password" placeholder="password" title="Password" data-keyboard="4">
 	</div>
