Fixed errors on the pattern="regex"
The syntax for the HTML pattern regex is more strict than usual. I need
more backslashes (against parentheses, brackets, slashes, hyphens).

--- a/popup.html
+++ b/popup.html
@@ -225,7 +225,7 @@ input#hash_sep {
 		<input type="text" id="password" placeholder="password" title="Password" data-keyboard="4">
 	</div>
 	<div class="row">
-		<input type="text" id="hostname" list="hostnames" pattern="[^\s!&quot;#$%&'()*+,/:;&lt;=&gt;?@\\^_`{|}~[\]]+|\[[0-9a-fA-F:]+\]" placeholder="hostname" title="Hostname (domain name)" data-keyboard="5 D">
+		<input type="text" id="hostname" list="hostnames" pattern="[^\s!&quot;#$%&'\(\)*+,\/:;&lt;=&gt;?@\\^_`{|}~[\]]+|\[[0-9a-fA-F:]+\]" placeholder="hostname" title="Hostname (domain name)" data-keyboard="5 D">
 		<input type="number" id="port" list="ports" min="0" max="65535" step="1" placeholder="port" title="TCP port" data-keyboard="6 :">
 	</div>
 	<div class="row">
