The external links now open in a new window/tab
Otherwise, the browser would refuse to open them.

--- a/options.html
+++ b/options.html
@@ -132,10 +132,10 @@ https://stackoverflow.com/q/952861
 <fieldset>
 	<legend>About</legend>
 	<div>
-		<p>Created by <a href="https://denilson.sa.nom.br/">Denilson Sá Maia</a>.</p>
-		<p>Full documentation is available at <a href="https://github.com/denilsonsa/crx-uri-splitter/blob/master/README.md">README.md</a>.</p>
-		<p><a href="https://github.com/denilsonsa/crx-uri-splitter/">Source-code available at GitHub</a> (<a href="https://github.com/denilsonsa/crx-uri-splitter/blob/master/LICENSE">MIT license</a>).</p>
-		<p>Includes <a href="https://github.com/bestiejs/punycode.js/tree/v1.4.1">punycode.js</a> by <a href="https://mathiasbynens.be/">Mathias Bynens</a> for <a href="https://en.wikipedia.org/wiki/Internationalized_domain_name">internationalized domain name</a> support.</p>
+		<p>Created by <a target="_blank" href="https://denilson.sa.nom.br/">Denilson Sá Maia</a>.</p>
+		<p>Full documentation is available at <a target="_blank" href="https://github.com/denilsonsa/crx-uri-splitter/blob/master/README.md">README.md</a>.</p>
+		<p><a target="_blank" href="https://github.com/denilsonsa/crx-uri-splitter/">Source-code available at GitHub</a> (<a target="_blank" href="https://github.com/denilsonsa/crx-uri-splitter/blob/master/LICENSE">MIT license</a>).</p>
+		<p>Includes <a target="_blank" href="https://github.com/bestiejs/punycode.js/tree/v1.4.1">punycode.js</a> by <a target="_blank" href="https://mathiasbynens.be/">Mathias Bynens</a> for <a target="_blank" href="https://en.wikipedia.org/wiki/Internationalized_domain_name">internationalized domain name</a> support.</p>
 	</div>
 </fieldset>
 
